# ChangeLog for dev-db/pgbouncer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Mar 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  pgbouncer-1.3.2.ebuild:
  Only use IUSE=doc for extra docs

  18 Mar 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pgbouncer-1.3.1.ebuild, +pgbouncer-1.3.2.ebuild, files/pgbouncer.initd:
  Version bump. Add doc IUSE, minor change to init and adapt to EAPI=2

  12 Jul 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pgbouncer-1.3-r1.ebuild, +pgbouncer-1.3.1.ebuild:
  Version bump, minor fixes

  17 May 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -pgbouncer-1.3.ebuild, +pgbouncer-1.3-r1.ebuild,
  +files/modify-config-paths.patch, files/pgbouncer.initd:
  New init script and fixes to the ebuild to reflect this. Also remove a typo
  in RDEPEND

  11 May 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  +pgbouncer-1.3.ebuild, +files/pgbouncer.initd, +metadata.xml:
  New ebuild for bug 243232 - thanks to gentoo-sunrise for all help
